add: added all sections. Added button animations and animations for icons in youlife section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <div class="container">
                     <ul class="menu">
-                        <li class="menu__item">About</li>
+                        <li class="menu__item menu__item_active">About</li>
                         <li class="menu__item">Syllabus</li>
                         <li class="menu__item-logo">
                             <img class="logo" src="./assets/logo.svg" alt="">
@@ -31,7 +31,7 @@
                         Whatever the approach to development may be, the final program must satisfy some fundamental properties
                     </div>
                     <div class="layout__btn">
-                        get started
+                        <span class="layout__btn_text">get started</span>
                     </div>
                     <div class="your-life-inner__sm">
                         <div class="your-life-inner__sm-item"><img src="./assets/mail_fff.svg" alt=""></div>
@@ -56,7 +56,7 @@
                             Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.
                         </div>
                         <div class="layout__btn">
-                            get started
+                            <span class="layout__btn_text">get started</span>
                         </div>
                     </div>
                     <div class="rappresent-picture">
@@ -70,7 +70,7 @@
             <div class="ourcommunity">
                 <div class="ourcommunity-nav-items">
                     <div class="nav-items-inner">
-                        <span class="arrow">&#8249;</span><span class="number">1</span><span class="slash">/</span><span class="number">5</span><span class="arrow">&#8250;</span>
+                        <img src="./assets/arrow-left.svg" class="arrow"/><span class="number">1</span><span class="slash">/</span><span class="number">5</span><img src="./assets/arrow-right.svg" class="arrow"/>
                     </div>
 
                 </div>
@@ -87,8 +87,8 @@
                         </div>
                     </div>
                     <div class="ourcommunity-slider">
-                        <img class="ourcommunity-slider__img" src="./assets/slider-item.png" alt="">
                         <img class="ourcommunity-slider__img" src="./assets/slider-item2.png" alt="">
+                        <img class="ourcommunity-slider__img" src="./assets/slider-item.png" alt="">
                         <img class="ourcommunity-slider__img" src="./assets/slider-item3.png" alt="">
 
                     </div>
@@ -97,7 +97,74 @@
             </div>
         </div>
     </section>
+    <section class="implement-outer">
+        <div class="container">
+            <div class="implement">
+                <div class="implement-picture">
+                    <img class="implement-picture__img" src="./assets/content-image-2.png" alt="img1" >
+                </div>
+                <div class="implement-description">
+                    <div class="implement-description__heading">
+                        Implement right Code
+                    </div>
+                    <div class="implement-description__text">
+                        These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation
+                    </div>
+                    <div class="layout__btn">
+                        <span class="layout__btn_text">Learn more</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="subscribe-outer">
+        <div class="container">
+            <div class="subscribe">
+                <div class="subscribe__title">
+                    sign up for our newsletter
+                </div>
+                <form class="subscribe__form">
+                    <input type="email" class="subscribe__form_input" placeholder="E-mail">
+                    <button class="subscribe__form_btn"><img src="./assets/fa-check.svg" alt="img3"></button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section class="download-outer">
+        <div class="container">
+            <div class="download">
+                <div class="download__title">
+                    Download the App
+                </div>
+                <div class="download__text">
+                    Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.
+                </div>
+                <div class="download__buttons">
+                    <button class="download__btn">
+                        <span class="download__btn_text"><p>apple store</p></span><span class="download__btn_icon"><img src="./assets/icon-apple.svg" alt="icon"/></span>
+                    </button>
+                    <button class="download__btn">
+                        <span class="download__btn_text"><p>play market</p></span><span class="download__btn_icon"><img src="./assets/icon-android.svg" alt="icon"/></span>
+                    </button>
+                </div>
 
-
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-inner">
+                <ul class="footer-inner__menu">
+                    <li class="footer-inner__menu_item">Credits</li>
+                    <li class="footer-inner__menu_item">Privacy</li>
+                    <li class="footer-inner__menu_item">Our teams</li>
+                </ul>
+                <img class="footer-inner__logo" src="./assets/logo.svg" alt="logo">
+                <p class="footer-inner__sign">
+                    by TonYem for RSS at 2020
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
