add: all animations for the task.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
             <div class="ourcommunity">
                 <div class="ourcommunity-nav-items">
                     <div class="nav-items-inner">
-                        <img src="./assets/arrow-left.svg" class="arrow"/><span class="number">1</span><span class="slash">/</span><span class="number">5</span><img src="./assets/arrow-right.svg" class="arrow"/>
+                        <img src="./assets/arrow-left.svg" class="arrow arrow-left"/><span class="number">1</span><span class="slash">/</span><span class="number">5</span><img src="./assets/arrow-right.svg" class="arrow arrow-right"/>
                     </div>
 
                 </div>
