fix: transfer files to other folder for transition to rs-school repo

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -15,7 +15,7 @@
                         <li class="menu__item menu__item_active">About</li>
                         <li class="menu__item">Syllabus</li>
                         <li class="menu__item-logo">
-                            <img class="logo" src="./assets/logo.svg" alt="">
+                            <img class="logo" src="assets/logo.svg" alt="">
                         </li>
                         <li class="menu__item">Projects</li>
                         <li class="menu__item">FAQ</li>
@@ -34,10 +34,10 @@
                         <span class="layout__btn_text">get started</span>
                     </div>
                     <div class="your-life-inner__sm">
-                        <div class="your-life-inner__sm-item"><img src="./assets/mail_fff.svg" alt=""></div>
-                        <div class="your-life-inner__sm-item"><img src="./assets/facebook_fff.svg" alt=""></div>
-                        <div class="your-life-inner__sm-item"><img src="./assets/insta_fff.svg" alt=""></div>
-                        <div class="your-life-inner__sm-item"><img src="./assets/telegram_fff.svg" alt=""></div>
+                        <div class="your-life-inner__sm-item"><img src="assets/mail_fff.svg" alt=""></div>
+                        <div class="your-life-inner__sm-item"><img src="assets/facebook_fff.svg" alt=""></div>
+                        <div class="your-life-inner__sm-item"><img src="assets/insta_fff.svg" alt=""></div>
+                        <div class="your-life-inner__sm-item"><img src="assets/telegram_fff.svg" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="rappresent-picture">
-                        <img class="rappresent-picture__img" src="./assets/content-image-1.png" alt="img1" >
+                        <img class="rappresent-picture__img" src="assets/content-image-1.png" alt="img1" >
                     </div>
                 </div>
             </div>
@@ -70,14 +70,14 @@
             <div class="ourcommunity">
                 <div class="ourcommunity-nav-items">
                     <div class="nav-items-inner">
-                        <img src="./assets/arrow-left.svg" class="arrow arrow-left"/><span class="number">1</span><span class="slash">/</span><span class="number">5</span><img src="./assets/arrow-right.svg" class="arrow arrow-right"/>
+                        <img src="assets/arrow-left.svg" class="arrow arrow-left"/><span class="number">1</span><span class="slash">/</span><span class="number">5</span><img src="assets/arrow-right.svg" class="arrow arrow-right"/>
                     </div>
 
                 </div>
                 <div class="ourcommunity-content">
                     <div class="ourcommunity-description">
                         <div class="ourcommunity-description__pic">
-                            <img class="ourcommunity-description__pic-img" src="./assets/Frame6.png" alt="">
+                            <img class="ourcommunity-description__pic-img" src="assets/Frame6.png" alt="">
                         </div>
                         <div class="ourcommunity-description__title">
                             our community
@@ -87,9 +87,9 @@
                         </div>
                     </div>
                     <div class="ourcommunity-slider">
-                        <img class="ourcommunity-slider__img" src="./assets/slider-item2.png" alt="">
-                        <img class="ourcommunity-slider__img" src="./assets/slider-item.png" alt="">
-                        <img class="ourcommunity-slider__img" src="./assets/slider-item3.png" alt="">
+                        <img class="ourcommunity-slider__img" src="assets/slider-item2.png" alt="">
+                        <img class="ourcommunity-slider__img" src="assets/slider-item.png" alt="">
+                        <img class="ourcommunity-slider__img" src="assets/slider-item3.png" alt="">
 
                     </div>
                 </div>
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="implement">
                 <div class="implement-picture">
-                    <img class="implement-picture__img" src="./assets/content-image-2.png" alt="img1" >
+                    <img class="implement-picture__img" src="assets/content-image-2.png" alt="img1" >
                 </div>
                 <div class="implement-description">
                     <div class="implement-description__heading">
@@ -125,7 +125,7 @@
                 </div>
                 <form class="subscribe__form">
                     <input type="email" class="subscribe__form_input" placeholder="E-mail">
-                    <button class="subscribe__form_btn"><img src="./assets/fa-check.svg" alt="img3"></button>
+                    <button class="subscribe__form_btn"><img src="assets/fa-check.svg" alt="img3"></button>
                 </form>
             </div>
         </div>
@@ -141,10 +141,10 @@
                 </div>
                 <div class="download__buttons">
                     <button class="download__btn">
-                        <span class="download__btn_text"><p>apple store</p></span><span class="download__btn_icon"><img src="./assets/icon-apple.svg" alt="icon"/></span>
+                        <span class="download__btn_text"><p>apple store</p></span><span class="download__btn_icon"><img src="assets/icon-apple.svg" alt="icon"/></span>
                     </button>
                     <button class="download__btn">
-                        <span class="download__btn_text"><p>play market</p></span><span class="download__btn_icon"><img src="./assets/icon-android.svg" alt="icon"/></span>
+                        <span class="download__btn_text"><p>play market</p></span><span class="download__btn_icon"><img src="assets/icon-android.svg" alt="icon"/></span>
                     </button>
                 </div>
 
@@ -159,7 +159,7 @@
                     <li class="footer-inner__menu_item">Privacy</li>
                     <li class="footer-inner__menu_item">Our teams</li>
                 </ul>
-                <img class="footer-inner__logo" src="./assets/logo.svg" alt="logo">
+                <img class="footer-inner__logo" src="assets/logo.svg" alt="logo">
                 <p class="footer-inner__sign">
                     by TonYem for RSS at 2020
                 </p>
